--- a/apps/client/locales/de-DE/admin.json
+++ b/apps/client/locales/de-DE/admin.json
@@ -77,7 +77,7 @@
     "registered": "Registriert",
     "active": "Aktiv",
     "vehicles": "Fahrzeuge",
-    "leo": "LEO",
+    "leo": "Polizei",
     "emsFd": "EMS/FD",
     "onDuty": "Im Dienst",
     "suspended": "Suspendiert",
