--- a/apps/client/locales/de-DE/citizen.json
+++ b/apps/client/locales/de-DE/citizen.json
@@ -19,7 +19,7 @@
     "surname": "Nachname",
     "fullName": "Vollständiger Name",
     "gender": "Geschlecht",
-    "ethnicity": "Ethnizität",
+    "ethnicity": "Herkunft",
     "address": "Adresse",
     "dateOfBirth": "Geburtsdatum",
     "image": "Bild",
