--- a/apps/client/locales/de-DE/citizen.json
+++ b/apps/client/locales/de-DE/citizen.json
@@ -15,7 +15,7 @@
     "createTowCall": "Abschleppanruf erstellen",
     "weight": "Gewicht",
     "height": "Höhe",
-    "name": "Name",
+    "name": "Vorname",
     "surname": "Nachname",
     "fullName": "Vollständiger Name",
     "gender": "Geschlecht",
@@ -27,35 +27,35 @@
     "driversLicense": "Führerschein",
     "driversLicenseCategory": "Führerschein-Kategorien",
     "weaponLicense": "Feuerwaffenschein",
-    "phoneNumber": "Rufnummer",
+    "phoneNumber": "Handnummer",
     "pilotLicense": "Pilotenlizenz",
     "pilotLicenseCategory": "Pilotenlizenz-Kategorien",
     "waterLicense": "Bootsführerschein",
     "waterLicenseCategory": "Bootsführerschein-Kategorien",
     "firearmLicenseCategory": "Feuerwaffenlizenz-Kategorien",
     "ccw": "VTW",
-    "createTaxiCall": "Taxi-Ruf erstellen",
-    "create911Call": "911 Anruf erstellen",
+    "createTaxiCall": "Taxi Dispatch erstellen",
+    "create911Call": "Notruf erstellen",
     "socialSecurityNumber": "Sozialversicherungsnummer",
     "occupation": "Beruf",
     "additionalInfo": "Zusatsinfo",
     "manageOccupation": "Berufe verwalten",
     "manageLicenses": "Lizenzen verwalten",
     "licenses": "Lizenzen",
-    "licenseSuspendedInfo": "License is suspended. Please contact an officer to revoke the suspension.",
-    "licenseNumber": "License Number",
-    "unmarkAsStolen": "Unmark as Stolen",
-    "markCitizenDeceased": "Mark Citizen Deceased",
-    "citizenDead": "WARNING: This citizen died on {date}",
-    "basicInformation": "Basic Information",
-    "optionalInformation": "Optional Information",
-    "licenseInformation": "License Information",
-    "officer": "Officer",
-    "createWithOfficer": "Create with Officer",
-    "previousRecords": "Previous Records",
-    "createPreviousRecordsStepDescription": "Here you can optionally add previous records this citizen has had. This is useful for when a citizen has been arrested before.",
-    "alert_markCitizenDeceased": "Are you sure you want mark <span>{citizen}</span> as deceased? Only EMS/FD can mark you alive again.",
-    "alert_deleteCitizen": "Sind Sie sicher, dass Sie <span>{citizen}</span> löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
+    "licenseSuspendedInfo": "Der Führerschein ist suspendiert. Bitte wende dich an einen Polizei-Beamten, um die Suspendierung aufzuheben.",
+    "licenseNumber": "License Nummer",
+    "unmarkAsStolen": "Nicht mehr als gestohlen markieren",
+    "markCitizenDeceased": "Markiere den Bürger als Gestorben",
+    "citizenDead": "WARNUNG: Dieses Bürger ist am {date} Gesborben",
+    "basicInformation": "Grundlegende Informationen",
+    "optionalInformation": "Optionale Informationen",
+    "licenseInformation": "Lizenz-Informationen",
+    "officer": "Polizist/in",
+    "createWithOfficer": "Ertsllen mit Polizist/in",
+    "previousRecords": "Vorherige Einträge",
+    "createPreviousRecordsStepDescription": "Hier kannst Du optional frühere Einträge zu diesem Bürger hinzufügen. Dies ist nützlich, wenn ein Bürger schon einmal verhaftet wurde.",
+    "alert_markCitizenDeceased": "Bist du sicher, dass Du <span>{citizen}</span> als Gestorben Markieren möchtest? Nur das EMS/FD kan diesen Status ändern!",
+    "alert_deleteCitizen": "Bist du sicher, dass Du <span>{citizen}</span> löschen willst? Diese Aktion kann nicht rückgängig gemacht werden."
   },
   "Vehicles": {
     "model": "Modell",
@@ -66,7 +66,7 @@
     "plate": "Nummernschild",
     "vinNumber": "Fahrzeug-Identifikationsnummer",
     "business": "Unternehmen",
-    "yourVehicles": "Ihre Fahrzeuge",
+    "yourVehicles": "Deine Fahrzeuge",
     "addVehicle": "Fahrzeug hinzufügen",
     "noVehicles": "Sie haben noch keine Fahrzeuge angemeldet.",
     "deleteVehicle": "Fahrzeug löschen",
@@ -86,8 +86,8 @@
     "dmvStatus": "DMV-Status",
     "transfer": "Übertragung",
     "transferVehicle": "Fahrzeug überführen",
-    "transferVehicleInfo": "Übertragen Sie Ihr <span>{model}</span> auf einen neuen Besitzer. Das bedeutet, dass Sie das Eigentum an diesem Fahrzeug verlieren und es nicht weiter verwalten können.",
-    "alert_deleteVehicle": "Sind Sie sicher, dass Sie dieses Fahrzeug löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
+    "transferVehicleInfo": "Übertrage den Besitzer deines <span>{model}</span> auf einen neuen Besitzer. Das bedeutet, dass Sie das Eigentum an diesem Fahrzeug verlieren und es nicht weiter verwalten können.",
+    "alert_deleteVehicle": "Bist Du sicher, dass Du dieses Fahrzeug löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden!"
   },
   "Weapons": {
     "model": "Modell",
@@ -99,19 +99,19 @@
     "deleteWeapon": "Waffe löschen",
     "registeredWeapons": "Registrierte Waffen",
     "successWeaponRegistered": "Erfolgreich eine Waffe registriert",
-     "bofStatus": "BOF Status",
-    "alert_deleteWeapon": "Sind Sie sicher, dass Sie diese Waffe löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden."
+    "bofStatus": "BOF Status",
+    "alert_deleteWeapon": "Bist Du sicher, dass Du  diese Waffe löschen willst? Diese Aktion kann nicht rückgängig gemacht werden!"
   },
   "MedicalRecords": {
     "citizen": "Bürger",
-    "yourMedicalRecords": "Ihre Krankenakten",
+    "yourMedicalRecords": "Deine Krankenakten",
     "addMedicalRecord": "Krankenakte hinzufügen",
     "editMedicalRecord": "Krankenakte bearbeiten",
-    "noMedicalRecords": "Sie haben noch keine Krankenakten.",
+    "noMedicalRecords": "Du hast noch keine Krankenakten.",
     "deleteMedicalRecord": "Krankenakte löschen",
     "bloodGroup": "Blutgruppe",
     "diseases": "Krankheiten",
-    "info_bloodgroup": "Hinweis: Wenn Sie Ihre Blutgruppe aktualisieren, wird auch die Blutgruppe aller anderen Krankenakten aktualisiert.",
-    "alert_deleteMedicalRecord": "Sind Sie sicher, dass Sie diese Krankenakte löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
+    "info_bloodgroup": "Hinweis: Wenn Du deine Blutgruppe aktualisieren, wird auch die Blutgruppe aller anderen Krankenakten aktualisiert.",
+    "alert_deleteMedicalRecord": "Bist Du sicher, dass Du diese Krankenakte löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden!"
   }
 }
