--- a/apps/client/locales/de-DE/common.json
+++ b/apps/client/locales/de-DE/common.json
@@ -49,11 +49,23 @@
     "goBack": "Zurück",
     "success": "Erfolgreich",
     "currency": "$",
-    "left": "Übrig",
-    "right": "Rechts",
-    "user": "Benutzer",
-    "savedSettingsSuccess": "Einstellungen erfolgreich gespeichert"
-  },
+    "left": "Left",
+    "right": "Right",
+    "user": "User",
+    "savedSettingsSuccess": "Settings successfully saved.",
+    "select": "Select...",
+    "item": "Item",
+    "address": "Address",
+    "location": "Location",
+    "startTyping": "Start typing...",
+    "searching": "Searching...",
+    "information": "Information",
+    "showingXResults": "Showing <span>{amount}</span> result(s)",
+    "revoke": "Revoke",
+    "ok": "OK",
+    "text-color": "Text Color",
+    "background-color": "Background Color"
+ },
   "Nav": {
     "citizen": "Bürger",
     "citizens": "Bürger",
