--- a/apps/client/locales/de-DE/common.json
+++ b/apps/client/locales/de-DE/common.json
@@ -166,5 +166,11 @@
     "serialNumberInUse": "Die Seriennummer ist bereits in Gebrauch.",
     "vinNumberInUse": "VIN-Nummer ist bereits in Gebrauch.",
     "alreadyHasPrimaryUnit": "Dieser Anruf hat bereits eine primäre Einheit."
+    "noActiveOfficer": "You don't have any active officer at this moment, please get back on-duty first.",
+    "socialSecurityNumberTaken": "This social security number is already in use.",
+    "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses.",
+    "vehicleIsImpounded": "This vehicle is impounded, you cannot edit or delete until it's released from the impound lot.",
+    "featureNotEnabled": "This feature is not enabled. ({feature})",
+    "errorUploadingImage": "Unable to upload your image at this moment. Please try again later. If this keeps reoccurring, contact the CAD-owner."
   }
 }
