--- a/apps/client/locales/de-DE/common.json
+++ b/apps/client/locales/de-DE/common.json
@@ -45,26 +45,26 @@
     "hide": "Verbergen",
     "show": "Anzeigen",
     "filters": "Filter",
-    "openInSearch": "In Suche öffnen",
+    "openInSearch": "In der Suche öffnen",
     "goBack": "Zurück",
     "success": "Erfolgreich",
     "currency": "$",
-    "left": "Left",
-    "right": "Right",
-    "user": "User",
-    "savedSettingsSuccess": "Settings successfully saved.",
-    "select": "Select...",
+    "left": "Links",
+    "right": "Rechts",
+    "user": "Benutzer",
+    "savedSettingsSuccess": "Einstellungen wurden erfolgreich gespeichert!",
+    "select": "Auswählen...",
     "item": "Item",
-    "address": "Address",
-    "location": "Location",
-    "startTyping": "Start typing...",
-    "searching": "Searching...",
-    "information": "Information",
-    "showingXResults": "Showing <span>{amount}</span> result(s)",
-    "revoke": "Revoke",
+    "address": "Addre",
+    "location": "Standort",
+    "startTyping": "Gebe etwas ein...",
+    "searching": "Suche...",
+    "information": "Informationen",
+    "showingXResults": "<span>{amount}</span> Ergebnis(e) verfügbar",
+    "revoke": "Widerrufen",
     "ok": "OK",
-    "text-color": "Text Color",
-    "background-color": "Background Color"
+    "text-color": "Text Farbe",
+    "background-color": "Background Farbe"
  },
   "Nav": {
     "citizen": "Bürger",
@@ -78,26 +78,26 @@
     "liveMap": "Live-Karte",
     "officer": "Offizier",
     "dashboard": "Dashboard",
-    "myOfficers": "Meine Offiziere",
-    "myOfficerLogs": "Mein Offizier-Logbuch",
+    "myOfficers": "Meine Polizisten",
+    "myOfficerLogs": "Mein Polizei-Logbuch",
     "incidents": "Vorfälle",
     "impoundLot": "Beschlagnahmungsstelle",
     "manageUnits": "Einheiten verwalten",
     "jail": "Gefängnis",
     "tow": "Hilfskraft",
-    "towLogs": "Hilfskraft-Logbuch",
+    "towLogs": "Abschleppdienst-Logbuch",
     "emsFd": "EMS/FD",
     "myDeputies": "Meine Abteilungsleiter",
     "account": "Konto",
     "logout": "Abmelden",
     "login": "Anmelden",
     "register": "Registrieren",
-    "callHistory": "Anruf-Verlauf",
+    "callHistory": "Dispatch-Verlauf",
     "citizenLogs": "Bürger-Logbuch",
     "courthouse": "Gericht",
     "dlExams": "FS-Prüfungen",
-    "dmv": "Department of Motor Vehicles",
-    "penalCodes": "Verbotliche Codes",
+    "dmv": "Kraftfahrzeugamt (Department of Motor Vehicles)",
+    "penalCodes": "Strafgesetzbücher",
     "weaponExams": "Waffen-Prüfungen",
     "myDeputyLogs": "Mein Abteilungsleiter-Logbuch"
   },
@@ -136,7 +136,7 @@
     "maxDivisionsReached": "Sie haben die maximale Anzahl von Divisionen pro Abteilungsleiter erreicht.",
     "maxLimitOfficersPerUserReached": "Sie haben die maximale Anzahl von Beamten pro Benutzer erreicht.",
     "maxCitizensPerUserReached": "Sie haben die maximale Anzahl von Bürger pro Benutzer erreicht.",
-    "discordIdInUse": "Dieser Discord-ID ist bereits in Benutzung.",
+    "discordIdInUse": "Diese Discord-ID ist bereits in Benutzung.",
     "totpCodeRequired": "Ein TOTP-Code ist erforderlich.",
     "Error": "Ein unerwarteter Fehler ist aufgetreten. Melden Sie dieses Problem einem Administrator.",
     "NOT_FOUND": "Das angeforderte Element oder die Seite wurde nicht gefunden. Bitte versuchen Sie, die Seite zu aktualisieren oder versuchen Sie es später noch einmal.",
@@ -148,7 +148,7 @@
     "alreadyPendingNameChange": "Dieser Benutzer hat bereits einen Namen-Änderungsantrag.",
     "nameChangeRequestNotNew": "Um einen Antrag auf Namensänderung zu stellen, darf der neue Name nicht mit dem vorherigen Namen übereinstimmen.",
     "socketError": "Es ist ein Socket-Fehler aufgetreten. Bitte versuchen Sie es später noch einmal.",
-    "socketErrorInfo": "Die Verbindung zur API wurde unterbrochen. Bitte verbinden Sie sich erneut mit dem Internet oder laden Sie das Browserfenster neu.",
+    "socketErrorInfo": "Die Verbindung zur API wurde unterbrochen. Bitte verbinde dich erneut mit dem Internet oder lade das Browserfenster neu.",
     "fine_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
     "jailTime_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
     "bail_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
@@ -165,12 +165,12 @@
     "updateAvailableInfo": "Eine neue Version von CAD ist verfügbar. Bitte laden Sie sich die neue Version herunter: https://github.com/SnailyCAD/snaily-cadv4",
     "serialNumberInUse": "Die Seriennummer ist bereits in Gebrauch.",
     "vinNumberInUse": "VIN-Nummer ist bereits in Gebrauch.",
-    "alreadyHasPrimaryUnit": "Dieser Anruf hat bereits eine primäre Einheit."
-    "noActiveOfficer": "You don't have any active officer at this moment, please get back on-duty first.",
-    "socialSecurityNumberTaken": "This social security number is already in use.",
-    "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses.",
-    "vehicleIsImpounded": "This vehicle is impounded, you cannot edit or delete until it's released from the impound lot.",
-    "featureNotEnabled": "This feature is not enabled. ({feature})",
-    "errorUploadingImage": "Unable to upload your image at this moment. Please try again later. If this keeps reoccurring, contact the CAD-owner."
+    "alreadyHasPrimaryUnit": "Dieser Dispatch hat bereits eine primäre Einheit!"
+    "noActiveOfficer": "Momentan sind keine Polizisten im Dienst, komme bitte erst in den Dienst zurück",
+    "socialSecurityNumberTaken": "Diese Sozialversicherungsnummer ist bereits in Gebrauch.",
+    "citizenNotAllowedToEditLicenses": "Du als Bürger darfst deine eigenen Lizenzen nicht bearbeiten. Bitte wende dich an einen Polizeibeamten, um deine Lizenzen zu verwalten.",
+    "vehicleIsImpounded": "Dieses Fahrzeug ist beschlagnahmt, Du kannst es nicht bearbeiten oder löschen, bis es aus der Beschlagnahmung entlassen wird.",
+    "featureNotEnabled": "Diese Funktion ist nicht aktiviert. ({feature})",
+    "errorUploadingImage": "Dein Bild kann im Moment nicht hochgeladen werden. Bitte versuche es später noch einmal. Wenn dieses Problem immer wieder auftritt, wende dich an den CAD-Eigentümer."
   }
 }
