--- a/apps/client/locales/de-DE/common.json
+++ b/apps/client/locales/de-DE/common.json
@@ -116,7 +116,7 @@
     "userDeleted": "Dieser Benutzer wurde gelöscht",
     "alreadyInThisBusiness": "Dieser Bürger ist bereits in diesem Unternehmen",
     "insufficientPermissions": "Du hast nicht die benötigten Berechtigungen, um dies zu tun.",
-    "maxBusinessesLength": "Sie haben die maximale Anzahl von Unternehmen pro Bürger erreicht.",
+    "maxBusinessesLength": "Du hast die die maximale Anzahl von Unternehmen pro Bürger erreicht.",
     "dateLargerThanNow": "Diese Datum ist in der Zukunft.",
     "divisionNotInDepartment": "Diese Division gehört nicht zu diesem Abteilungsleiter.",
     "passwordsDoNotMatch": "Die Passwörter stimmen nicht überein.",
@@ -133,36 +133,36 @@
     "recordOrWarrantAlreadyLinked": "Dieser Aufenthalt ist bereits mit einem anderen Benutzer verknüpft.",
     "businessIsPending": "Dieses Unternehmen ist noch nicht aktiviert.",
     "businessCreatedButPending": "Dieses Unternehmen wurde erstellt, aber noch nicht aktiviert.",
-    "maxDivisionsReached": "Sie haben die maximale Anzahl von Divisionen pro Abteilungsleiter erreicht.",
-    "maxLimitOfficersPerUserReached": "Sie haben die maximale Anzahl von Beamten pro Benutzer erreicht.",
-    "maxCitizensPerUserReached": "Sie haben die maximale Anzahl von Bürger pro Benutzer erreicht.",
+    "maxDivisionsReached": "Du hast dien die maximale Anzahl von Divisionen pro Abteilungsleiter erreicht.",
+    "maxLimitOfficersPerUserReached": "Du hast die die maximale Anzahl von Beamten pro Benutzer erreicht.",
+    "maxCitizensPerUserReached": "Du hast die maximale Anzahl von Bürger pro Benutzer erreicht.",
     "discordIdInUse": "Diese Discord-ID ist bereits in Benutzung.",
     "totpCodeRequired": "Ein TOTP-Code ist erforderlich.",
-    "Error": "Ein unerwarteter Fehler ist aufgetreten. Melden Sie dieses Problem einem Administrator.",
-    "NOT_FOUND": "Das angeforderte Element oder die Seite wurde nicht gefunden. Bitte versuchen Sie, die Seite zu aktualisieren oder versuchen Sie es später noch einmal.",
-    "Network Error": "Aufgrund eines Netzwerkfehlers konnte die API nicht erreicht werden. Stellen Sie sicher, dass die API online ist und dass Sie mit dem Internet verbunden sind.",
-    "mustSetBotTokenGuildId": "Diese Funktion kann nicht verwendet werden, da kein `BOT_TOKEN` oder `GUILD_ID` vorhanden war. Bitte lesen Sie, wie Sie Discord-Rollen aktivieren: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
-    "maxDepartmentsReachedPerUser": "Sie haben die maximale Anzahl von Abteilungen pro Benutzer erreicht.",
-    "allowRegularLoginIsDisabled": "Die Funktion `allowRegularLogin` ist deaktiviert. Bitte loggen Sie sich stattdessen über Discord ein.",
-    "Invalid Permissions": "Sie haben keine Berechtigung für den Zugriff auf diese API-Route.",
+    "Error": "Ein unerwarteter Fehler ist aufgetreten. Melde dich mit dieses Problem einem Administrator.",
+    "NOT_FOUND": "Das angeforderte Element oder die Seite wurde nicht gefunden. Bitte versuche, die Seite zu aktualisieren oder versuche es später noch einmal.",
+    "Network Error": "Aufgrund eines Netzwerkfehlers konnte die API nicht erreicht werden. Stelle sicher, dass die API online ist und dass Du mit dem Internet verbunden sind.",
+    "mustSetBotTokenGuildId": "Diese Funktion kann nicht verwendet werden, da kein `BOT_TOKEN` oder `GUILD_ID` vorhanden war. Schaue dir bitte die Docs seite an, um Discord-Rollen richtig zu aktivieren: https://cad-docs.caspertheghost.me/docs/discord-integration/discord-roles",
+    "maxDepartmentsReachedPerUser": "Du hast die maximale Anzahl von Abteilungen pro Benutzer erreicht.",
+    "allowRegularLoginIsDisabled": "Die Funktion `allowRegularLogin` ist deaktiviert. Bitte logge dich stattdessen über Discord ein.",
+    "Invalid Permissions": "Du hast keine Berechtigung für den Zugriff auf diese API-Route.",
     "alreadyPendingNameChange": "Dieser Benutzer hat bereits einen Namen-Änderungsantrag.",
     "nameChangeRequestNotNew": "Um einen Antrag auf Namensänderung zu stellen, darf der neue Name nicht mit dem vorherigen Namen übereinstimmen.",
-    "socketError": "Es ist ein Socket-Fehler aufgetreten. Bitte versuchen Sie es später noch einmal.",
+    "socketError": "Es ist ein Socket-Fehler aufgetreten. Bitte versuche es später noch einmal.",
     "socketErrorInfo": "Die Verbindung zur API wurde unterbrochen. Bitte verbinde dich erneut mit dem Internet oder lade das Browserfenster neu.",
     "fine_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
     "jailTime_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
     "bail_invalidDataReceived": "Ungültige Daten empfangen. Min: {min}, max: {max}",
-    "forbidden": "Verbotene",
+    "forbidden": "Verboten",
     "pageNotFound": "Seite nicht gefunden",
     "unitCallsignInUse": "Dieser Rufzeichen ist bereits in Benutzung.",
     "steamNameInUse": "Dieser Steam-Name ist bereits in Benutzung.",
     "steamAccountAlreadyLinked": "Dieser Steam-Account ist bereits mit einem anderen Benutzer verknüpft.",
     "cannotRegisterFirstWithSteam": "Du kannst nicht mit Steam registrieren, wenn du noch keinen Benutzer hast.",
-    "Unauthorized": "Sie wurden abgemeldet. Bitte loggen Sie sich wieder ein, um fortzufahren.",
-    "captchaRequired": "Bitte bestätigen Sie, dass Sie kein Roboter sind.",
-    "invalidCaptcha": "Wir konnten nicht überprüfen, ob Sie ein Mensch sind. Bitte kontaktieren Sie einen Administrator, wenn Sie glauben, dass dies ein Fehler ist.",
+    "Unauthorized": "Du wurdest abgemeldet. Bitte logge dich wieder ein, um fortzufahren.",
+    "captchaRequired": "Bitte bestätigen, dass Du kein Roboter bist
+    "invalidCaptcha": "Wir konnten nicht überprüfen, ob Du ein Mensch sind. Bitte kontaktiere einen Administrator, wenn Du glauben, dass dies ein Fehler ist.",
     "updateAvailable": "Eine neue Version von CAD ist verfügbar.",
-    "updateAvailableInfo": "Eine neue Version von CAD ist verfügbar. Bitte laden Sie sich die neue Version herunter: https://github.com/SnailyCAD/snaily-cadv4",
+    "updateAvailableInfo": "Eine neue Version von CAD ist verfügbar. Bitte lade dir die neue Version herunter: https://github.com/SnailyCAD/snaily-cadv4",
     "serialNumberInUse": "Die Seriennummer ist bereits in Gebrauch.",
     "vinNumberInUse": "VIN-Nummer ist bereits in Gebrauch.",
     "alreadyHasPrimaryUnit": "Dieser Dispatch hat bereits eine primäre Einheit!"
