--- a/apps/client/locales/de-DE/courthouse.json
+++ b/apps/client/locales/de-DE/courthouse.json
@@ -33,6 +33,7 @@
     "noCourthousePosts": "Es gibt noch keine Gerichtsposten.",
     "alert_deleteCourthousePost": "Sind Sie sicher, dass Sie diesen Beitrag löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
     "alert_deleteCourtEntry": "Sind Sie sicher, dass Sie diesen Eintrag löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden.",
+    "alert_cancelRequest": "Are you sure you want to cancel this expungement request? This action cannot be undone.",
     "alert_deleteCourtDate": "Sind Sie sicher, dass Sie diesen Gerichtstermin löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden."
   }
 }
