--- a/apps/client/locales/pt-BR/leo.json
+++ b/apps/client/locales/pt-BR/leo.json
@@ -246,6 +246,13 @@
     "vehicleImpoundLocation": "O veículo fornecido ({plate}) será apreendido em {impoundLocation}. Você poderá visualizar este veículo na página do lote apreendido.",
     "steamId": "Steam ID",
     "discordId": "Discord ID",
+    "citizenMissing": "AVISO: Este cidadão desapareceu em {date}",
+    "declareFound": "Declarar Encontrado",
+    "declareMissing": "Declarar Desaparecido",
+    "manageTones": "Gerenciar Tons",
+    "noExistingTones": "Não há tons existentes.",
+    "toneRevoked": "Tom revogado",
+    "toneRevokedText": "O tom foi revogado com sucesso.",
     "alert_endIncident": "Tem certeza de que deseja encerrar este incidente. Ele ainda pode ser visto pelos oficiais.",
     "alert_deleteRecord": "Tem certeza que deseja excluir este registro? Esta ação não pode ser desfeita.",
     "alert_deleteOfficer": "Tem certeza de que deseja excluir <span>{officer}</span>? Esta ação não pode ser desfeita.",
