feat: add learn more button for images

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -64,7 +64,9 @@
     "revoke": "Revoke",
     "ok": "OK",
     "text-color": "Text Color",
-    "background-color": "Background Color"
+    "background-color": "Background Color",
+    "url": "URL",
+    "supportedImages": "See supported image types and URLs"
   },
   "Nav": {
     "citizen": "Citizen",
