🌐 [UPDATE] Update Russian translations

--- a/apps/client/locales/ru/auth.json
+++ b/apps/client/locales/ru/auth.json
@@ -19,6 +19,12 @@
     "continueAs": "Продолжить, как {username}",
     "sixDigitCode": "Введите 6-значный код из приложения-аутентификатора",
     "loginViaSteam": "Войти через Steam",
-    "or": "ИЛИ"
+    "or": "ИЛИ",
+    "accountPending": "Аккаунт на рассмотрении",
+    "accountPendingText": "Учетная запись находится на рассмотрении. Пока ожидаете, можно синхронизировать аккаунт со сторонними соединениями. Как только учетная запись будет одобрена, можно будет войти в систему.",
+    "syncDiscord": "Синхронизировать Discord",
+    "syncSteam": "Синхронизировать Steam",
+    "discordSyncSuccess": "Аккаунт Discord успешно синхронизирован.",
+    "steamSyncSuccess": "Аккаунт Steam успешно синхронизирован."
   }
 }
