--- a/apps/client/locales/ru/leo.json
+++ b/apps/client/locales/ru/leo.json
@@ -240,9 +240,19 @@
     "suspendFirearmsLicense": "Приостановленная лицензия на оружие",
     "endDate": "Дата окончания",
     "patrolVehicle": "Патрульный автомобиль",
+    "callUpdated": "Вызов #{caseNumber} был обновлен",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
     "vehicleImpoundLocation": "Указанный транспорт ({plate}) будет эвакуирован в {impoundLocation}. Вы сможете просмотреть этот автомобиль на странице штрафстоянки.",
+    "steamId": "Steam ID",
+    "discordId": "Discord ID",
+    "citizenMissing": "ВНИМАНИЕ: Гражданин пропал {date}",
+    "declareFound": "Обьявить найденным",
+    "declareMissing": "Обьявить пропавшим",
+    "manageTones": "Управлять тонами",
+    "noExistingTones": "Нет существующих тонов.",
+    "toneRevoked": "Тон отозван",
+    "toneRevokedText": "Тон успешно отозван.",
     "alert_endIncident": "Вы уверены, что хотите завершить этот инцидент. Его все еще могут просматривать офицеры.",
     "alert_deleteRecord": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteOfficer": "Вы уверены, что хотите удалить <span>{officer}</span>? Это действие необратимо",
@@ -275,5 +285,9 @@
     "categories": "Категории",
     "deleteExam": "Удалить экзамен",
     "alert_deleteExam": "Вы уверены, что хотите удалить экзамен на получение лицензии? Это действие необратимо."
+  },
+  "Bof": {
+    "bureauOfFirearms": "Бюро огнестрельного оружия",
+    "noWeaponsPendingBof": "Оружия, ожидающего одобрения, нет."
   }
 }
