--- a/apps/client/locales/ru/calls.json
+++ b/apps/client/locales/ru/calls.json
@@ -56,6 +56,7 @@
     "addUnit": "Добавить юнит",
     "unit": "Юнит",
     "unassign": "Открепить",
+    "dragToMoveCallBlip": "Перетащите эту метку, чтобы установить местоположение.",
     "alert_purgeSelectedCalls": "Вы уверены, что хотите удалить {length} элемент(ов)? Это действие необратимо.",
     "alert_deleteCallEvent": "Вы уверены, что хотите удалить событие? Это дейтвие необратимо.",
     "alert_end911Call": "Вы уверены, что хотите завершить вызов?",
