--- a/apps/client/locales/ru/courthouse.json
+++ b/apps/client/locales/ru/courthouse.json
@@ -32,8 +32,10 @@
     "addCourthousePost": "Добавить публикацию",
     "noCourthousePosts": "Публикаций нет",
     "createdBy": "Создано",
+    "cancelRequest": "Отменить запрос",
     "alert_deleteCourthousePost": "Вы уверены, что хотите удалить эту публикацию? Это действие необратимо",
     "alert_deleteCourtEntry": "Вы уверены, что хотите удалить это судебное заседание? Это действие необратимо",
+    "alert_cancelRequest": "Вы уверены, что хотите отменить этот запрос на удаление? Это действие необратимо",
     "alert_deleteCourtDate": "Вы уверены, что хотите удалить эту дату суда? Это действие необратимо"
   }
 }
