--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -81,6 +81,9 @@
     "emsFd": "EMS/FD",
     "onDuty": "On Duty",
     "suspended": "Suspended",
+    "pruneUsers": "Prune Users",
+    "inactiveUsers": "Inactive Users",
+    "lastSeen": "Last Seen",
     "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
     "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
     "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
