--- a/apps/client/locales/de-DE/leo.json
+++ b/apps/client/locales/de-DE/leo.json
@@ -68,8 +68,8 @@
     "signal100enabled": "Signal 100 is enabled",
     "records": "Records",
     "suspendLicense": "Suspend License",
-    "deleteRecord": "Delete Record",
-    "image": "Image",
+    "deleteRecord": "Eintrag löschen",
+    "image": "Bild",
     "panicButton": "Panic Button",
     "panicButtonLeo": "{officer} has pressed the panic button.",
     "viewAllResults": "View All Results",
@@ -78,8 +78,8 @@
     "noImpoundedVehicles": "There are no impounded vehicles",
     "allowCheckout": "Allow Checkout",
     "plate": "Plate",
-    "color": "Color",
-    "location": "Location",
+    "color": "Farbe",
+    "location": "Standort",
     "model": "Model",
     "incidents": "Incidents",
     "createIncident": "Create Incident",
@@ -105,7 +105,7 @@
     "noPenalCodesSelected": "No penal codes selected yet.",
     "penalCode": "Penal Code",
     "total": "Total",
-    "fines": "Fines",
+    "fines": "Rechnungen",
     "bail": "Bail",
     "editLicenses": "Edit Licenses",
     "callHistory": "Call History",
@@ -128,7 +128,7 @@
     "editWrittenWarning": "Edit Written Warning",
     "quantity": "Quantity",
     "illegal": "Illegal",
-    "add": "Add",
+    "add": "Hinzufügen",
     "noSeizedItems": "No seized items yet.",
     "editSeizedItem": "Edit Seized Item",
     "addSeizedItem": "Add Seized Item",
@@ -200,7 +200,7 @@
     "vehicleBoloPlaced": "This vehicle has an active BOLO.",
     "citizenBoloPlaced": "This citizen has an active BOLO.",
     "noNotes": "There are no notes yet.",
-    "addNote": "Add note",
+    "addNote": "Notiz hinzufüge",
     "manageNote": "Manage Note",
     "text": "Text",
     "deleteNote": "Delete note",
