:rocket: feat: robust Action logs

--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -13,6 +13,7 @@
     "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
     "MANAGE_COURTHOUSE": "Manage Courthouse",
     "MANAGE_PENDING_WARRANTS": "Manage Pending Warrants",
+    "MANAGE_AUDIT_LOGS": "Manage Audit Logs",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
@@ -84,6 +85,8 @@
     "pruneUsers": "Prune Users",
     "inactiveUsers": "Inactive Users",
     "lastSeen": "Last Seen",
+    "changes": "Changes",
+    "data": "Raw Data",
     "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
     "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
     "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
